@@ -105,6 +105,10 @@ Library
 Extension Modules
 -----------------
 
+- #1494314: Fix a regression with high-numbered sockets in 2.4.3. This 
+  means that select() on sockets > FD_SETSIZE (typically 1024) work again. 
+  The patch makes sockets use poll() internally where available. 
+
 - Assigning None to pointer type fields in ctypes structures possible
   overwrote the wrong fields, this is fixed now.
 
